--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClassName = 'FabriqueurTickets.AppKt'
+    mainClassName = 'fabriqueurTicketsPackage.MainApp'
 }
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
